chore: new images

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
     <button class="nav-button left" id="prevBtn" onclick="prevSlide()">&#10094;</button>
     <button class="nav-button right" id="nextBtn" onclick="nextSlide()">&#10095;</button>
     <div class="slides" id="slides">
+      <div class="slide" style="background-image: url('images/new_image4.jpg');"></div>
+      <div class="slide" style="background-image: url('images/new_image5.jpg');"></div>
+      <div class="slide" style="background-image: url('images/new_image6.jpg');"></div>
+      <div class="slide" style="background-image: url('images/new_image1.jpg');"></div>
+      <div class="slide" style="background-image: url('images/new_image2.jpg');"></div>
+      <div class="slide" style="background-image: url('images/new_image3.jpg');"></div>
       <div class="slide" style="background-image: url('images/image1.jpg');"></div>
       <div class="slide" style="background-image: url('images/image2.jpg');"></div>
       <div class="slide" style="background-image: url('images/image3.jpg');"></div>
